--- a/style.css
+++ b/style.css
@@ -34,12 +34,17 @@ a {
 	width: 120px;
 }
 
+header{
+	display: flex;
+    	justify-content: center;
+    	padding: 20px;
+}
+
 .navbar {
 	width: 100%;
 	background: #fff;
-	border-bottom: 1px solid #ccc;
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-end;
 	align-items: center;
 	padding: 10px 30px;
 	box-sizing: border-box;
