--- a/style.css
+++ b/style.css
@@ -86,20 +86,6 @@ header{
 	transition: 0.5s;
 }
 
-.backdrop {
-	display: none;
-	animation: 0.4s ease-in-out fadeIn forwards;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	background: rgba(0, 0, 0, 0.8);
-	cursor: pointer;
-}
-
-
-
 .welcome-section{
 	display: flex;
 	flex-direction: column;
@@ -454,51 +440,13 @@ footer {
 	.logo{
 		padding: 5px;
 	}
+
 	
-	.no-scroll {
-		overflow: hidden;
-		transition: 0.3s ease-in-out;
-	}
-
-
-
-	.welcome-section > h1{
-		text-align: center;
-	}
-
-	.about-section{
-		padding: 0;
-	}
-
-	.title-about{
-		margin: 2rem 0;
-	}
-
-	.title-and-text-div{
-		margin: 1.4rem;
-	}
-	
-
-	footer{
-		text-align: center;
-	}
-
-	.address {
-		padding-right: 5px;
-	} 
-	
-	.rights{
-		padding-left: 5px;
-	}
-
-	.company{
-		display: inline-block;
-	}*/
 	.ham {
 		position: absolute;
 		/* always keep ham on top of everything */
 		z-index: 1000;
-		top: 13px;
+		top: 30px;
 		right: 20px;
 		width: 30px;
 		height: 30px;
@@ -518,14 +466,14 @@ footer {
 	  .navbar {
 		position: absolute;
 		top: 0;
-		left: 0;
-		background: black;
+		right: 0;
+		background: #00b8b8;
 		width: 100vw;
 		height: 100vh;
 		overflow: hidden;
 		color: white;
 		/* hide the menu above the screen by default */
-		transform: translateY(-100%);
+		transform: translateX(100%);
 		/* transition adds a little animation when sliding in and out the menu */
 		transition: transform 0.2s ease;
 	  }
@@ -533,7 +481,7 @@ footer {
 	  
 	  .showNav {
 		/* show the menu */
-		transform: translateY(0);
+		transform: translateX(0);
 	  }
 	  
 	  /* basic nav styling below */
@@ -548,10 +496,13 @@ footer {
 		align-items: center;
 	  }
 	  
+	  .links li {
+		margin-right: 0;
+	 }
+
 	  .navbar ul li a {
 		color: white;
 		padding-bottom: 10px;
-		border-bottom: 2px solid black;
 		text-decoration: none;
 		font-family: 'Open Sans', sans-serif;
 		font-size: 1.2rem;
