--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ header{
 .bim-part{
 	display: flex;
     	align-items: center;
+	margin: 10px;
 }
 
 .img-bim{
@@ -166,6 +167,7 @@ header{
 
 .text-bim{
 	padding-left: 5px;
+	font-style: italic;
 }
 
 .methods{
