add background-size to welcome-section

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ header{
 	background-image: url("img/eurotunnel-1.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
+	background-size: cover; 
 }
 
 .welcome-section > h1 {
