text-bim modifications

--- a/style.css
+++ b/style.css
@@ -192,9 +192,14 @@ header{
 	width: 100px;
 }
 
-.text-bim{
+.text-bim-div{
+	max-width: 300px;
 	padding-left: 5px;
 	font-style: italic;
+}
+
+.text-bim{
+	font-size: 13px;
 }
 
 .methods{
